// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tool.utils > getStatusBadge > matches snapshot for input-available 1`] = `
<div>
  <span
    class="badge gap-1 rounded-full text-xs"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-clock size-4 animate-pulse"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 6v6l4 2"
      />
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
    Running
  </span>
</div>
`;

exports[`Tool.utils > getStatusBadge > matches snapshot for input-streaming 1`] = `
<div>
  <span
    class="badge gap-1 rounded-full text-xs"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle size-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
    Pending
  </span>
</div>
`;

exports[`Tool.utils > getStatusBadge > matches snapshot for output-available 1`] = `
<div>
  <span
    class="badge gap-1 rounded-full text-xs"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-check-big size-4 text-green-600"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21.801 10A10 10 0 1 1 17 3.335"
      />
      <path
        d="m9 11 3 3L22 4"
      />
    </svg>
    Completed
  </span>
</div>
`;

exports[`Tool.utils > getStatusBadge > matches snapshot for output-error 1`] = `
<div>
  <span
    class="badge gap-1 rounded-full text-xs"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-x size-4 text-red-600"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="m15 9-6 6"
      />
      <path
        d="m9 9 6 6"
      />
    </svg>
    Error
  </span>
</div>
`;
